--- a/index.html
+++ b/index.html
@@ -1,6 +1,50 @@
 <!DOCTYPE html>
 
-<htlm>
-<head></head>
-<body></body>
+<html>
+
+<head>
+    <title>Super Bowling!</title>
+    <link rel="stylesheet" type="text/css" href="main.css">
+</head>
+
+<body>
+    <table class="card">
+        <tr class="rolls">
+            <td>01</td>
+            <td>01</td>
+            <td>01</td>
+            <td>01</td>
+            <td>01</td>
+            <td>01</td>
+            <td>01</td>
+            <td>01</td>
+            <td>01</td>
+            <td>01</td>
+            <td>01</td>
+            <td>01</td>
+            <td>01</td>
+            <td>01</td>
+            <td>01</td>
+            <td>01</td>
+            <td>01</td>
+            <td>01</td>
+            <td>01</td>
+            <td>01</td>
+            <td>01</td>
+        </tr>
+        <tr class="score">
+            <td colspan="2">01</td>
+            <td colspan="2">01</td>
+            <td colspan="2">01</td>
+            <td colspan="2">01</td>
+            <td colspan="2">01</td>
+            <td colspan="2">01</td>
+            <td colspan="2">01</td>
+            <td colspan="2">01</td>
+            <td colspan="2">01</td>
+            <td colspan="3">01</td>
+        </tr>
+    </table>
+</body>
+
 </html>
