--- a/index.html
+++ b/index.html
@@ -8,43 +8,79 @@
 </head>
 
 <body>
+    <h1>Super Bowling!</h1>
     <table class="card">
         <tr class="rolls">
-            <td>01</td>
-            <td>01</td>
-            <td>01</td>
-            <td>01</td>
-            <td>01</td>
-            <td>01</td>
-            <td>01</td>
-            <td>01</td>
-            <td>01</td>
-            <td>01</td>
-            <td>01</td>
-            <td>01</td>
-            <td>01</td>
-            <td>01</td>
-            <td>01</td>
-            <td>01</td>
-            <td>01</td>
-            <td>01</td>
-            <td>01</td>
-            <td>01</td>
-            <td>01</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
         </tr>
         <tr class="score">
-            <td colspan="2">01</td>
-            <td colspan="2">01</td>
-            <td colspan="2">01</td>
-            <td colspan="2">01</td>
-            <td colspan="2">01</td>
-            <td colspan="2">01</td>
-            <td colspan="2">01</td>
-            <td colspan="2">01</td>
-            <td colspan="2">01</td>
-            <td colspan="3">01</td>
+            <td colspan="2"></td>
+            <td colspan="2"></td>
+            <td colspan="2"></td>
+            <td colspan="2"></td>
+            <td colspan="2"></td>
+            <td colspan="2"></td>
+            <td colspan="2"></td>
+            <td colspan="2"></td>
+            <td colspan="2"></td>
+            <td colspan="3"></td>
         </tr>
     </table>
+    <table>
+        <tr class="pinSelector">
+            <td colspan="2">
+                <button>1 Pin</button>
+            </td>
+            <td colspan="2">
+                <button>2 Pin</button>
+            </td>
+            <td colspan="2">
+                <button>3 Pin</button>
+            </td>
+            <td colspan="2">
+                <button>4 Pin</button>
+            </td>
+            <td colspan="2">
+                <button>5 Pin</button>
+            </td>
+            <td colspan="2">
+                <button>6 Pin</button>
+            </td>
+            <td colspan="2">
+                <button>7 Pin</button>
+            </td>
+            <td colspan="2">
+                <button>8 Pin</button>
+            </td>
+            <td colspan="2">
+                <button>9 Pin</button>
+            </td>
+            <td colspan="3">
+                <button>10 Pin</button>
+            </td>
+        </tr>
+    </table>
+
 </body>
 
 </html>
