--- a/index.html
+++ b/index.html
@@ -14,27 +14,7 @@
         <h1>Super Bowling!</h1>
         <table class="card">
             <tr class="rolls">
-                <td align="center">{{aScore[0]}}</td>
-                <td align="center">{{aScore[1]}}</td>
-                <td align="center">{{aScore[2]}}</td>
-                <td align="center">{{aScore[3]}}</td>
-                <td align="center">{{aScore[4]}}</td>
-                <td align="center">{{aScore[5]}}</td>
-                <td align="center">{{aScore[6]}}</td>
-                <td align="center">{{aScore[7]}}</td>
-                <td align="center">{{aScore[8]}}</td>
-                <td align="center">{{aScore[9]}}</td>
-                <td align="center">{{aScore[10]}}</td>
-                <td align="center">{{aScore[11]}}</td>
-                <td align="center">{{aScore[12]}}</td>
-                <td align="center">{{aScore[13]}}</td>
-                <td align="center">{{aScore[14]}}</td>
-                <td align="center">{{aScore[15]}}</td>
-                <td align="center">{{aScore[16]}}</td>
-                <td align="center">{{aScore[17]}}</td>
-                <td align="center">{{aScore[18]}}</td>
-                <td align="center">{{aScore[19]}}</td>
-                <td align="center">{{aScore[20]}}</td>
+                <td align="center" ng-repeat="score in arrScore track by $index">{{score}}</td>
             </tr>
             <tr class="score">
                 <td align="center" colspan="2"></td>
@@ -53,17 +33,17 @@
 
     <div id="buttons">
         <form ng-submit="rollAdd()">
-            <button type="submit" ng-click="sub = 0">Nooooo!</button>
-            <button type="submit" ng-click="sub = 1">One</button>
-            <button type="submit" ng-click="sub = 2">Two</button>
-            <button type="submit" ng-click="sub = 3">Three</button>
-            <button type="submit" ng-click="sub = 4">Four</button>
-            <button type="submit" ng-click="sub = 5">Five</button>
-            <button type="submit" ng-click="sub = 6">Six</button>
-            <button type="submit" ng-click="sub = 7">Seven</button>
-            <button type="submit" ng-click="sub = 8">Eight</button>
-            <button type="submit" ng-click="sub = 9">Nine</button>
-            <button type="submit" ng-click="sub = 10">Tacos!</button>
+            <button type="submit" ng-click="numUserSubmission = 0">Nooooo!</button>
+            <button type="submit" ng-click="numUserSubmission = 1">One</button>
+            <button type="submit" ng-click="numUserSubmission = 2">Two</button>
+            <button type="submit" ng-click="numUserSubmission = 3">Three</button>
+            <button type="submit" ng-click="numUserSubmission = 4">Four</button>
+            <button type="submit" ng-click="numUserSubmission = 5">Five</button>
+            <button type="submit" ng-click="numUserSubmission = 6">Six</button>
+            <button type="submit" ng-click="numUserSubmission = 7">Seven</button>
+            <button type="submit" ng-click="numUserSubmission = 8">Eight</button>
+            <button type="submit" ng-click="numUserSubmission = 9">Nine</button>
+            <button type="submit" ng-click="numUserSubmission = 10">Tacos!</button>
         </form>
     </div>
 
